src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Numero_de_Documento__c</fullName>
        <label>Número de Documento</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Area_cliente__c</fullName>
        <label>Área cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Recursos Humanos</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Finanzas - Contabilidad</fullName>
                </value>
                <value>
                    <fullName>Compras</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
                <value>
                    <fullName>Producción - Manofactura</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Administración</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Departamento__c</fullName>
        <formula>TEXT(SDX_Distrito__r.SDX_Departamento__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departamento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Distrito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distrito</label>
        <referenceTo>Distrito__c</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDX_Genero__c</fullName>
        <label>Género</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Femenino</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Nivel_de_relacion__c</fullName>
        <label>Nivel de relación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Con relación</fullName>
                </value>
                <value>
                    <fullName>Sin relación</fullName>
                </value>
                <value>
                    <fullName>Relación débil</fullName>
                </value>
                <value>
                    <fullName>No necesario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Provincia__c</fullName>
        <formula>TEXT(SDX_Distrito__r.SDX_Provincia__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Tipo_de_contacto__c</fullName>
        <label>Tipo de contacto</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Tipo_de_documento__c</fullName>
        <label>Tipo de documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>ID Externo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los Contactos</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CO001_Valida_Genero</fullName>
        <active>true</active>
        <errorConditionFormula>AND
    (
    NOT(ISNEW()),
    ISBLANK(TEXT(SDX_Genero__c))
    )</errorConditionFormula>
        <errorDisplayField>SDX_Genero__c</errorDisplayField>
        <errorMessage>CO001: Debe Ingresar Género al editar el contacto</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CO002_ValidaTipoDocumento</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(TEXT(SDX_Tipo_de_documento__c))) &amp;&amp; 
ISBLANK(Numero_de_Documento__c)</errorConditionFormula>
        <errorDisplayField>Numero_de_Documento__c</errorDisplayField>
        <errorMessage>CO002: Debes indicar el Número de documento</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CO003_Valida_Genero</fullName>
        <active>true</active>
        <errorConditionFormula>AND
    (
    NOT(ISNEW()),
    ISBLANK(TEXT(SDX_Nivel_de_relacion__c))
    )</errorConditionFormula>
        <errorDisplayField>SDX_Nivel_de_relacion__c</errorDisplayField>
        <errorMessage>CO003: Debe especificar un &quot;Nivel de Relación&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CO004_Valida_Area_Cliente</fullName>
        <active>true</active>
        <errorConditionFormula>AND
    (
    NOT(ISNEW()),
    ISBLANK(TEXT(SDX_Area_cliente__c))
    )</errorConditionFormula>
        <errorDisplayField>SDX_Area_cliente__c</errorDisplayField>
        <errorMessage>CO004: Debe especificar un &quot;Área de Cliente&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CO005_LargoTelefonoMovil</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(MobilePhone)),
OR(
LEN(MobilePhone) &gt; 12,
LEN(MobilePhone) &lt; 10)
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>CO005 Debe ingresar el largo de teléfono correcto  en formato internacional +(código de país)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CO006_LargoTelefono</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Phone)),
OR(
LEN(Phone) &gt; 12,
LEN(Phone) &lt; 10)
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>CO006 Debe ingresar el largo de teléfono correcto  en formato internacional +(código de país)</errorMessage>
    </validationRules>
</CustomObject>